# scijava

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
arb-sys/: Cargo.toml  build.rs
arb-sys/arb-c2b7e36-c/: configure
flint-sys/: build.rs
flint-sys/src/: qsieve.rs
gmp-mpfr-sys/: Cargo.toml  README.md  RELEASES.md  build.rs
gmp-mpfr-sys/doc-c/MPC/: Complex-Functions.html  Concept-Index.html  Function-Index.html  GNU-Free-Documentation-License.html  GNU-MPC-Basics.html  Installing-GNU-MPC.html  References.html  Reporting-Bugs.html  index.html
gmp-mpfr-sys/doc-c/MPFR/: API-Compatibility.html  Function-and-Type-Index.html  Installing-MPFR.html  MPFR-Basics.html  MPFR-Interface.html  Reporting-Bugs.html  index.html
gmp-mpfr-sys/etc/: appveyor.yml  gitlab-ci.yml  unpack.sh
gmp-mpfr-sys/mpfr-4.1.1-p1-c/: ChangeLog  Makefile.in  PATCHES  VERSION  configure
gmp-mpfr-sys/mpfr-4.1.1-p1-c/doc/: Makefile.in
gmp-mpfr-sys/mpfr-4.1.1-p1-c/src/: Makefile.in  get_patches.c  version.c
gmp-mpfr-sys/mpfr-4.1.1-p1-c/tests/: Makefile.in
gmp-mpfr-sys/mpfr-4.1.1-p1-c/tools/bench/: Makefile.in
gmp-mpfr-sys/mpfr-4.1.1-p1-c/tune/: Makefile.in
gmp-mpfr-sys/src/: gmp.rs  lib.rs  mpc.rs  mpfr.rs
java/: pom.xml
java/src/main/java/palaiologos/scijava/: ArithmeticException.java  BivariateRealFunction.java  (+11 more)
java/src/test/java/: TestArithmetic.java  TestSciFloat.java  TestSciInteger.java
src/: lib.rs  quad.rs  random.rs  scicomplex_elementary.rs  scifloat.rs  scifloat_elementary.rs  scifloat_function.rs  sciinteger.rs  scirational.rs
(+12 files in other folders)
