[package]
name = "scijava"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0+"

[profile.release]
strip = true
opt-level = 3
lto = true
panic = "abort"
debug-assertions = false
overflow-checks = false
debug = false

[dependencies]
flint-sys = "=0.7.3"
rug = "=1.18.0"
jni = "0.20.0"

[patch.crates-io]
gmp-mpfr-sys = { path = "gmp-mpfr-sys/" }

[dependencies.gmp-mpfr-sys]
version = "1.4.11"
features = ["mpfr", "mpc", "force-cross"]

[lib]
crate-type = ["cdylib"]

[features]
unwind-stubs = []
